--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ DerivedData
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
 # Pods/
+TryCatchFinally.xcodeproj/project.xcworkspace/contents.xcworkspacedata
